# e2eagent

./: pyproject.toml  requirements.txt
.github/workflows/: dailysync.yml
data/: nba-news.json  nba-score.json  nfl-news.json  nfl-score.json
scripts/: ingest.py  update_vector_db.py
src/: models.py
src/agents/: analyst.py
src/tools/: retriever.py
